kubernetes/apps/netbird/netbird/app/dashboard.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: netbird-dashboard
spec:
  selector:
    app.kubernetes.io/name: netbird-dashboard
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbird-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: netbird-dashboard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: netbird-dashboard
    spec:
      containers:
        - name: dashboard
          image: docker.io/netbirdio/dashboard:v2.91.1
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              memory: 64Mi
              cpu: 10m
            limits:
              memory: 256Mi
