kubernetes/apps/netbird/netbird/app/postgresql.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: netbird-db
spec:
  selector:
    app.kubernetes.io/name: netbird-db
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: netbird-db
spec:
  serviceName: netbird-db
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: netbird-db
  template:
    metadata:
      labels:
        app.kubernetes.io/name: netbird-db
    spec:
      containers:
        - name: postgresql
          image: postgres:18-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
            - name: init
              mountPath: /docker-entrypoint-initdb.d
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 512Mi
      volumes:
        - name: init
          configMap:
            name: netbird-db-init
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn-encrypted-v1
        resources:
          requests:
            storage: 5Gi
